fix(grid): fix column header wonkiness on horizontal scroll

--- a/vuu-ui/packages/data-grid/src/grid.css
+++ b/vuu-ui/packages/data-grid/src/grid.css
@@ -39,7 +39,7 @@
   height: 100% !important;
 }
 
-.hwDataGrid.scrolling-x .Canvas .hwColumnGroupHeader {
+.hwDataGrid.scrolling-x .hwDataGridCanvas .hwColumnGroupHeader {
   position: relative;
 }
 
